--- a/index.html
+++ b/index.html
@@ -267,7 +267,9 @@
     </span>
 
   </section>
-
+<footer>
+  <p>&copy; 2024 BurgerVilla. All rights reserved by <span class="animated-text">Inioluwa Atanda</span>.</p>
+</footer>
 <!-- JavaScript -->
 <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/happy358/TornPaper@v0.0.3/tornpaper.min.js"></script>
